# PingPong

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
docs/: AMovingBall.c
docs/sheetSheet/: CMakeLists.txt
docs/sheetSheet/lib/: CMakeLists.txt
include/: appSettings.h  audio.h  collision.h  constants.h  game.h  healperFunc.h  image.h  loopFunc.h  mainLayer.h  text.h
src/: appSettings.c  audio.c  collision.c  game.c  healperFunc.c  image.c  loopFunc.c  main.c  mainLayer.c  text.c
